Update and rename versel.json to vercel.json

--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,9 @@
 {
   "functions": {
-      "appw/*.wphp": {
+      "app/*.php": {
       "runtime": "vercel-php@0.6.0"
-    }
   },
   "routes": [
+    { "src": "/(.*)",  "dest": "/index.php" },
   ]
 }
