--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,9 @@
 {
   "functions": {
-      "app/*.php": {
+      "api/*.php": {
+      "runtime": "vercel-php@0.6.0"
+      },
+     "api/app/*.php": {
       "runtime": "vercel-php@0.6.0"
       }
   },
